--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="container">
         <div class="page-header">
-          <h1><a href="/">{{title}}</a></h1>
+          <h1><a href="http://slogger.github.io/apple.uprt.ru">{{title}}</a></h1>
         </div>
         <ng:view></ng:view>
       </div>
