--- a/index.html
+++ b/index.html
@@ -35,9 +35,23 @@
 
     <footer class="visible-desktop">
       <div class="container">
+        <div class="ad">
+          <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-5917041113293451";
+            /* apple.uprt.ru #1 */
+            google_ad_slot = "3254624135";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            //-->
+          </script>
+          <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+        </div>    
         <p class="muted credit">{{footer}}</p>
+
       </div>
-    </footer>  
+    </footer> 
     <!-- 
     <script src="static/js/bootstrap-alert.js"></script>
 
