--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/jquery.Jcrop.min.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
-    <!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet"> -->
-<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css" rel="stylesheet"> -->
     <link href="static/css/bootstrap-responsive.min.css" rel="stylesheet">
-
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="static/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="static/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="static/ico/favicon.png">
     <!--[if lt IE 9]>
       <script src="static/js/html5shiv.js"></script>
     <![endif]-->
@@ -35,19 +37,26 @@
 
     <footer class="visible-desktop">
       <div class="container">
+        <div class="ad">
+          <script type="text/javascript"><!--
+            google_ad_client = "ca-pub-5917041113293451";
+            /* apple.uprt.ru #1 */
+            google_ad_slot = "3254624135";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            //-->
+          </script>
+          <script type="text/javascript"
+            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+          </script>
+        </div>    
         <p class="muted credit">{{footer}}</p>
-      </div>
-    </footer>  
-    <!-- 
-    <script src="static/js/bootstrap-alert.js"></script>
 
-    <script src="static/js/bootstrap-modal.js"></script>
-     -->
+      </div>
+    </footer> 
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/jquery.Jcrop.min.js"></script>
     <script src="static/js/jquery.color.js"></script>
-    <script src="static/js/pixastic.custom.min.js"></script>
-        
     <script src="script/app.js"></script>
   </body>
 </html>
