--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="container">
         <div class="page-header">
-          <h1><a href="/">{{model.title}}</a></h1>
+          <h1><a href="/">APPLE.UPRT.RU</a></h1>
         </div>
         
         <ng:view></ng:view>
@@ -51,7 +51,7 @@
             src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
           </script>
         </div>    
-        <p class="muted credit">{{model.footer}}</p>
+        <p class="muted credit">Дезигн ис симпле! Аппле.упрт.ру (с) Алл ригтх ресервед. Майл то коннект: <a href="mailto:slogger@uprt.ru">slogger@uprt.ru</a></p>
       </div>
     </footer> 
     <script src="static/js/angular.min.js"></script>
